src/objects/Service_Request_Type_Field_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Additional_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_in_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change in Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reduction_in_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reduction in Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remodel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remodel</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Request Type Field Setting</label>
    <pluralLabel>Service Request Type Field Settings</pluralLabel>
</CustomObject>